# Cinder-Gx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cinderblock.xml
include/cinder/: CinderDiligentImGui.h
samples/: CMakeLists.txt
samples/Tutorial01_HelloTriangle/src/: HelloTriangleApp.cpp
samples/Tutorial01_HelloTriangle/vc2019/: HelloTriangle.sln  HelloTriangle.vcxproj  HelloTriangle.vcxproj.filters
samples/Tutorial01_HelloTriangle/xcode/HelloTriangle.xcodeproj/: project.pbxproj
samples/Tutorial01_HelloTriangle/xcode_ios/HelloTriangle.xcodeproj/: project.pbxproj
samples/Tutorial02_Cube/: readme.md
samples/Tutorial02_Cube/src/: CubeApp.cpp
samples/Tutorial02_Cube/vc2019/: Cube.sln  Cube.vcxproj  Cube.vcxproj.filters
samples/Tutorial02_Cube/xcode/Cube.xcodeproj/: project.pbxproj
samples/Tutorial02_Cube/xcode_ios/Cube.xcodeproj/: project.pbxproj
samples/Tutorial03_Texturing/: readme.md
samples/Tutorial03_Texturing/src/: TexturingApp.cpp
samples/Tutorial03_Texturing/vc2019/: Texturing.sln  Texturing.vcxproj  Texturing.vcxproj.filters
samples/Tutorial03_Texturing/xcode/Texturing.xcodeproj/: project.pbxproj
samples/Tutorial03_Texturing/xcode_ios/Texturing.xcodeproj/: project.pbxproj
samples/Tutorial04_Instancing/src/: InstancingApp.cpp
samples/Tutorial04_Instancing/vc2019/: Instancing.sln  Instancing.vcxproj  Instancing.vcxproj.filters
samples/Tutorial04_Instancing/xcode/Instancing.xcodeproj/: project.pbxproj
samples/Tutorial04_Instancing/xcode_ios/Instancing.xcodeproj/: project.pbxproj
samples/Tutorial05_TextureArray/vc2019/: TextureArray.sln  TextureArray.vcxproj  TextureArray.vcxproj.filters
samples/Tutorial05_TextureArray/xcode/TextureArray.xcodeproj/: project.pbxproj
samples/Tutorial05_TextureArray/xcode_ios/TextureArray.xcodeproj/: project.pbxproj
samples/Tutorial06_Multithreading/src/: MultithreadingApp.cpp
samples/Tutorial06_Multithreading/vc2019/: Multithreading.sln  Multithreading.vcxproj  Multithreading.vcxproj.filters
samples/Tutorial06_Multithreading/xcode/Multithreading.xcodeproj/: project.pbxproj
samples/Tutorial06_Multithreading/xcode_ios/Multithreading.xcodeproj/: project.pbxproj
samples/Tutorial07_GeometryShader/: readme.md
samples/Tutorial07_GeometryShader/src/: GeometryShaderApp.cpp
samples/Tutorial07_GeometryShader/vc2019/: GeometryShader.sln  GeometryShader.vcxproj  GeometryShader.vcxproj.filters
samples/Tutorial07_GeometryShader/xcode/GeometryShader.xcodeproj/: project.pbxproj
samples/Tutorial07_GeometryShader/xcode_ios/GeometryShader.xcodeproj/: project.pbxproj
samples/Tutorial08_Tessellation/src/: TessellationApp.cpp
samples/Tutorial08_Tessellation/vc2019/: Tessellation.sln  Tessellation.vcxproj  Tessellation.vcxproj.filters
samples/Tutorial08_Tessellation/xcode/Tessellation.xcodeproj/: project.pbxproj
samples/Tutorial08_Tessellation/xcode_ios/Tessellation.xcodeproj/: project.pbxproj
samples/Tutorial11_ResourceUpdates/: readme.md
samples/Tutorial11_ResourceUpdates/src/: ResourceUpdatesApp.cpp
samples/Tutorial11_ResourceUpdates/vc2019/: ResourceUpdates.sln  ResourceUpdates.vcxproj  ResourceUpdates.vcxproj.filters
samples/Tutorial11_ResourceUpdates/xcode/ResourceUpdates.xcodeproj/: project.pbxproj
samples/Tutorial11_ResourceUpdates/xcode_ios/ResourceUpdates.xcodeproj/: project.pbxproj
samples/Tutorial12_RenderTarget/src/: RenderTargetApp.cpp
samples/Tutorial12_RenderTarget/vc2019/: RenderTarget.sln  RenderTarget.vcxproj  RenderTarget.vcxproj.filters
samples/Tutorial12_RenderTarget/xcode/RenderTarget.xcodeproj/: project.pbxproj
samples/Tutorial12_RenderTarget/xcode_ios/RenderTarget.xcodeproj/: project.pbxproj
samples/Tutorial13_ShadowMap/: readme.md
samples/Tutorial13_ShadowMap/vc2019/: ShadowMap.sln  ShadowMap.vcxproj  ShadowMap.vcxproj.filters
samples/Tutorial13_ShadowMap/xcode/ShadowMap.xcodeproj/: project.pbxproj
samples/Tutorial13_ShadowMap/xcode_ios/ShadowMap.xcodeproj/: project.pbxproj
samples/Tutorial14_ComputeShader/src/: ComputeShaderApp.cpp
samples/Tutorial14_ComputeShader/vc2019/: ComputeShader.sln  ComputeShader.vcxproj  ComputeShader.vcxproj.filters
samples/Tutorial14_ComputeShader/xcode/ComputeShader.xcodeproj/: project.pbxproj
samples/Tutorial14_ComputeShader/xcode_ios/ComputeShader.xcodeproj/: project.pbxproj
samples/Tutorial18_Queries/: readme.md
samples/Tutorial18_Queries/src/: QueriesApp.cpp
samples/Tutorial18_Queries/vc2019/: Queries.sln  Queries.vcxproj  Queries.vcxproj.filters
samples/Tutorial18_Queries/xcode/Queries.xcodeproj/: project.pbxproj
samples/Tutorial18_Queries/xcode_ios/Queries.xcodeproj/: project.pbxproj
samples/_tutorials/: CMakeLists.txt
samples/_tutorials/Tutorial01_HelloTriangle/: CMakeLists.txt  readme.md
samples/_tutorials/Tutorial01_HelloTriangle/src/: HelloTriangleApp.cpp
samples/_tutorials/Tutorial01_HelloTriangle/vc2019/: HelloTriangle.sln  HelloTriangle.vcxproj  HelloTriangle.vcxproj.filters
samples/_tutorials/Tutorial02_Cube/: CMakeLists.txt
samples/_tutorials/Tutorial02_Cube/src/: CubeApp.cpp
samples/_tutorials/Tutorial02_Cube/vc2019/: Cube.sln  Cube.vcxproj  Cube.vcxproj.filters
samples/_tutorials/Tutorial03_Texturing/: CMakeLists.txt
samples/_tutorials/Tutorial03_Texturing/src/: TexturingApp.cpp
samples/_tutorials/Tutorial04_Instancing/: CMakeLists.txt  readme.md
samples/_tutorials/Tutorial05_TextureArray/: CMakeLists.txt  readme.md
samples/_tutorials/Tutorial06_Multithreading/: CMakeLists.txt  readme.md
samples/_tutorials/Tutorial07_GeometryShader/: CMakeLists.txt
samples/_tutorials/Tutorial08_Tessellation/: CMakeLists.txt  readme.md
samples/_tutorials/Tutorial11_ResourceUpdates/: CMakeLists.txt
samples/_tutorials/Tutorial12_RenderTarget/: CMakeLists.txt  readme.md
samples/_tutorials/Tutorial13_ShadowMap/: CMakeLists.txt
samples/_tutorials/Tutorial14_ComputeShader/: CMakeLists.txt  readme.md
samples/_tutorials/Tutorial18_Queries/: CMakeLists.txt
samples/_tutorials/common/: TexturedCube.cpp
samples/common/: TexturedCube.cpp  TexturedCube.h  Utils.h
(+133 files in other folders)
